删除share-user模块无用测试代码，避免云端构建报错

--- a/share-modules/share-user/pom.xml
+++ b/share-modules/share-user/pom.xml
@@ -117,6 +117,15 @@
             <groupId>com.share</groupId>
             <artifactId>share-api-user</artifactId>
         </dependency>
+            <!-- 其它依赖 ... -->
+
+            <!-- Spring Boot Test -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <scope>test</scope>
+            </dependency>
+
     </dependencies>
 
     <build>
